fixed up CSS padding and alignment

--- a/assets/css/rack.css
+++ b/assets/css/rack.css
@@ -4,7 +4,7 @@
     border: 2% solid black;
     align-items: center;
     justify-content: center;
-    padding-top: 10%;
+    padding-top: 12%;
     /* flex-direction: column; */
 }
 
@@ -13,7 +13,7 @@
     width: calc(90% / 7);
     justify-content: center;
     background-color: rgb(78, 45, 8);
-    padding: 0.5% 0 0.5% 0;
+    padding: 2% 0 2% 0;
     flex-direction: column;
 }
 
@@ -25,6 +25,13 @@
     height: 9vw;
     min-width: 0;
     box-shadow: 1px  rgb(102, 84, 84) ;
-    /* padding: 0 0.5%; */
-    /* flex: 1 1 0; */
+    margin: calc(3.313 / 2.391 * 5%) auto;
+}
+
+.rack :first-child {
+    padding-left: 0.5%;
+}
+
+.rack :last-child {
+    padding-right: 0.5%;
 }
